Added activity analysis for files

--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -252,13 +252,16 @@
     <Compile Include="ViewModel\ChartViewModelBase.cs" />
     <Compile Include="ViewModel\DataBaseManagementViewModel.cs" />
     <Compile Include="ViewModel\DayActivityViewModels\DayActivityContentProviderViewModel.cs" />
+    <Compile Include="ViewModel\DayActivityViewModels\DayActivityFilesAnalyseViewModel.cs" />
     <Compile Include="ViewModel\FilesChartViewModelBase.cs" />
     <Compile Include="ViewModel\FilteringViewModel.cs" />
     <Compile Include="ViewModel\HourActivityViewModels\HourActivityContentProviderViewModel.cs" />
     <Compile Include="ViewModel\HourActivityViewModels\HourActivityFilesAnalyseViewModel.cs" />
     <Compile Include="ViewModel\MonthActivityViewModels\MonthActivityContentProviderViewModel.cs" />
+    <Compile Include="ViewModel\MonthActivityViewModels\MonthActivityFilesAnalyseViewModel.cs" />
     <Compile Include="ViewModel\PresentationViewModel.cs" />
     <Compile Include="ViewModel\RepositoryAnalyserViewModelBase.cs" />
+    <Compile Include="ViewModel\UserActivityViewModels\UsersActivityFilesAnalyseViewModel.cs" />
     <Compile Include="ViewModel\UserActivityViewModels\UsersActivityViewModel.cs" />
     <Compile Include="ViewModel\DayActivityViewModels\DayActivityViewModel.cs" />
     <Compile Include="ViewModel\DifferenceWindowViewModel.cs" />
@@ -269,6 +272,7 @@
     <Compile Include="ViewModel\UserActivityViewModels\UsersCodeFrequencyViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="ViewModel\WeekdayActivityViewModels\WeekdayActivityContentProviderViewModel.cs" />
+    <Compile Include="ViewModel\WeekdayActivityViewModels\WeekdayActivityFilesAnalyseViewModel.cs" />
     <Compile Include="View\AnalysisView.xaml.cs">
       <DependentUpon>AnalysisView.xaml</DependentUpon>
     </Compile>
@@ -283,6 +287,9 @@
     </Compile>
     <Compile Include="View\DayActivityViews\DayActivityContentProviderView.xaml.cs">
       <DependentUpon>DayActivityContentProviderView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\DayActivityViews\DayActivityFilesAnalyseView.xaml.cs">
+      <DependentUpon>DayActivityFilesAnalyseView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\DifferencesView.xaml.cs">
       <DependentUpon>DifferencesView.xaml</DependentUpon>
@@ -305,6 +312,9 @@
     <Compile Include="View\MonthActivityViews\MonthActivityContentProviderView.xaml.cs">
       <DependentUpon>MonthActivityContentProviderView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\MonthActivityViews\MonthActivityFilesAnalyseView.xaml.cs">
+      <DependentUpon>MonthActivityFilesAnalyseView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PresentationView.xaml.cs">
       <DependentUpon>PresentationView.xaml</DependentUpon>
     </Compile>
@@ -320,11 +330,17 @@
     <Compile Include="View\UsersActivityViews\UserActivityContentProviderView.xaml.cs">
       <DependentUpon>UserActivityContentProviderView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\UsersActivityViews\UserActivityFilesAnalyseView.xaml.cs">
+      <DependentUpon>UserActivityFilesAnalyseView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\WeekdayActivityViews\WeekdayActivityChartView.xaml.cs">
       <DependentUpon>WeekdayActivityChartView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\WeekdayActivityViews\WeekdayActivityContentProviderView.xaml.cs">
       <DependentUpon>WeekdayActivityContentProviderView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\WeekdayActivityViews\WeekdayActivityFilesAnalyseView.xaml.cs">
+      <DependentUpon>WeekdayActivityFilesAnalyseView.xaml</DependentUpon>
     </Compile>
     <Page Include="Resources\AppStyles.xaml">
       <SubType>Designer</SubType>
@@ -374,6 +390,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\DayActivityViews\DayActivityFilesAnalyseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\DifferencesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -418,6 +438,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\MonthActivityViews\MonthActivityFilesAnalyseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\PresentationView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -438,11 +462,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\UsersActivityViews\UserActivityFilesAnalyseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\WeekdayActivityViews\WeekdayActivityChartView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\WeekdayActivityViews\WeekdayActivityContentProviderView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\WeekdayActivityViews\WeekdayActivityFilesAnalyseView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
