--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -19,4 +19,5 @@
   <package id="System.Data.SQLite.Linq" version="1.0.102.0" targetFramework="net46" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net46" />
   <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net46" />
+  <package id="ZetaLongPaths" version="1.0.0.14" targetFramework="net46" />
 </packages>
